@@ -5,6 +5,8 @@ Added support for Solaris 11.
 
 Bugfixes in partial-order encoding.
 
+Added --float-overflow-check
+
 
 4.6
 ===
